# deployml

./: .gitignore  404.html  CONTRIBUTION_PLAN_EXPLAINABILITY_FAIRNESS.md  DEPLOYMENT_GUIDE.md  Dockerfile.fastapi  Dockerfile.feast  Dockerfile.mlflow  EXPLAINABILITY_FAIRNESS_WORKFLOW.md  GKE_DEPLOYMENT_GUIDE.md  QUICK_START_CONTRIBUTION.md  README.md  check.ipynb  config.example.yaml  config.yaml  gke-deploy-test.yaml  index.html  mkdocs.yml  my-mlflow-config.yaml  my-mlops-stack.yaml  my-vm-stack.yaml  pyproject.toml  sitemap.xml
.github/workflows/: test-pypi.yml
api/cli-commands/: index.html
api/overview/: index.html
app/: __init__.py  main.py
changelog/: index.html
contributing/: index.html
demo/: auto-destory-demo.yaml
docker-images/fastapi/: Dockerfile  main.py  requirements.txt
docker-images/mlflow/: Dockerfile
docs/: contributing.md  index.md  installation.md
docs/api/: cli-commands.md  overview.md
docs/features/: costs.md  overview.md  pipeline.md
docs/tutorials/: example.md  gcp-cloud-run.md  gcp-cloud-vm.md  gcp.md  gke-deployment.md  minikube.md  overview.md
example/: README.md
example/config/: gcp-gke-sample.yaml
example/monitoring-demo/: .dockerignore  EXPLAINABILITY_FAIRNESS_GUIDE.md  README.md  add_sensitive_attributes.py  (+10 more)
experiment/: gcp_mlflow.py  notebook_mlflow.ipynb
faq/: index.html
feature_store/: feature_store.yaml
installation/: index.html
notebooks/: notebook_cli_demo.ipynb
recycling_bin/: AUTO_TEARDOWN.md  GCP_VM_Deployment.md  PROJECT_PLAN.md  README_vm_FEAST.md  gcp.md
search/: search_index.json
(+99 files in other folders)
