
[project]
name = "deployml-core"
version = "0.0.1"
description = "Infra for academia"
authors = [
    {name = "Drew Hoang", email = "codentell@gmail.com"},
    {name = "Jarvin Bayona", email = "jarvin.bayona@gmail.com"},
    {name = "Grant Nitta", email = "gtnitta@gmail.com"},
    {name = "Robert Clements", email = "rclements@usfca.edu"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "pyyaml", 
    "jinja2",
    "rich",
    "google-cloud-storage>=3.1.1,<4.0.0",
    "ipython>=9.0.0",
    "jupyter>=1.0.0",
    "requests>=2.28.0",
    "pandas>=2.2.1",
    "seaborn (>=0.13.2,<0.14.0)"
]

[project.scripts]
deployml = "deployml.cli.cli:main"

[tool.poetry]
packages = [{include = "deployml", from = "src"}]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
